[MBJ] T3: correct some typos [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/AAII/T4/02_cluster_analysis.html
+++ b/src/Notes/DataScience/Master/2C_2C/AAII/T4/02_cluster_analysis.html
@@ -333,7 +333,7 @@ As we increase the number of clusters, the solution quality will improve because
 </p>
 
 <p>
-To the extent this scenario is realized, there will be a sharp decrease in successive differences in criterion value, \(W_K − W_{K+1}\), at \(K = K^*\). That is, \(\{W_K − W_{K+1} |K &lt; K^*\} \geq \{W_K − W_{K+1} |K \geq K^*\}\). An estimate \(\hat{K}*\) for \(K^*\) is then obtained by identifying a “kink” in the plot of \(W_K\) as a function of \(K\).
+To the extent this scenario is realized, there will be a sharp decrease in successive differences in criterion value, \(W_K − W_{K+1}\), at \(K = K^*\). That is, \(\{W_K − W_{K+1} |K &lt; K^*} \geq {W_K − W_{K+1} |K \geq K^*\}\). An estimate \(\hat{K}*\) for \(K^*\) is then obtained by identifying a “kink” in the plot of \(W_K\) as a function of \(K\).
 </p>
 
 <p>
@@ -377,7 +377,7 @@ Also, dendrogram interpretations are only valid if the data truly exhibits the h
 <div id="Cluster Analysis-Clustering Algorithms-Hierarchical Clustering-Agglomerative Clustering"><h4 id="Agglomerative Clustering" class="header"><a href="#Cluster Analysis-Clustering Algorithms-Hierarchical Clustering-Agglomerative Clustering">Agglomerative Clustering</a></h4></div>
 
 <p>
-Agglomerative clustering starts with each observation as its own cluster. Then, at each step, it merges the two closest clusters together until there's only one big cluster left. To measure dissimilarity between two clusters, let's call them \(G\) and \(H\). We look at all the pairs of observations, one from \(G\) and one from \(H\), and find the dissimilarity between them.
+Agglomerative clustering starts with each observation as its own cluster. Then, at each step, it merges the two closest clusters together until there's only one big cluster left. To measure dissimilarity between two clusters, let's call them \(G\) and \(H\). We look at all the pairs of observations, one from G and one from H, and find the dissimilarity between them.
 </p>
 
 <p>
