--- a/src/Notes/DataScience/Master/2C_2C/DL/05_rnn.html
+++ b/src/Notes/DataScience/Master/2C_2C/DL/05_rnn.html
@@ -104,7 +104,7 @@ etc
 <div id="Redes Neuronales Recurrentes-Introducción a las aplicaciones del Deep Learning para el NLP-Comparación entre enfoques clásico y de Deep Learning-Enfoque Deep Learning"><h4 id="Enfoque Deep Learning" class="header"><a href="#Redes Neuronales Recurrentes-Introducción a las aplicaciones del Deep Learning para el NLP-Comparación entre enfoques clásico y de Deep Learning-Enfoque Deep Learning">Enfoque Deep Learning</a></h4></div>
 
 <p>
-Mientas que el enfoque basado en Deep Learning se compone de los siguientes pasos:
+Mientas que el enfoque clásico se compone de los siguientes pasos:
 </p>
 
 <ol>
@@ -177,18 +177,21 @@ Redes convolucionales (CNN)
 </li><li>
 Autoencoders
 
+</li><li>
+
+
 </li></ul>
 <div id="Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing"><h2 id="Ejemplos de Deep Learning para Natural Language Processing" class="header"><a href="#Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing">Ejemplos de Deep Learning para Natural Language Processing</a></h2></div>
 
 <div id="Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing-Clasificación de Textos"><h3 id="Clasificación de Textos" class="header"><a href="#Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing-Clasificación de Textos">Clasificación de Textos</a></h3></div>
 
 <p>
-Para la clasificación de texto se define la siguiente estructura:
+Para la clasificación de texto se definen la siguiente estructuras:
 </p>
 
 <ul>
 <li>
-Capa de embedding: que transforma la secuencia de palabras en una tabla de vectores capturando la semántica de las mismas.
+Capa de embedding: que transforma la secuencia de palabras en una talba de vectores capturando la semántica de las mismas.
 
 </li><li>
 Componente de representación profunda: se utiliza RNN o CNN para obtener una representación comprimida de la entrada.
@@ -229,7 +232,7 @@ Distinguimos entre dos tipos:
 Ver el cap. Text Generation and Summarization Using GRUs de Hands-On Natural Language Processing with Python.
 </p>
 
-<div id="Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing-Traducción"><h3 id="Traducción" class="header"><a href="#Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing-Traducción">Traducción</a></h3></div>
+<div id="Redes Neuronales Recurrentes-Traducción"><h2 id="Traducción" class="header"><a href="#Redes Neuronales Recurrentes-Traducción">Traducción</a></h2></div>
 
 <p>
 Distinguimos distintos sistemas que efectúan la traducción automática:
@@ -237,20 +240,20 @@ Distinguimos distintos sistemas que efectúan la traducción automática:
 
 <ul>
 <li>
-<span id="Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing-Traducción-Sistemas expertos"></span><strong id="Sistemas expertos">Sistemas expertos</strong>: se definen reglas lingüísticas y sintácticas.
+<span id="Redes Neuronales Recurrentes-Traducción-Sistemas expertos"></span><strong id="Sistemas expertos">Sistemas expertos</strong>: se definen reglas lingüísticas y sintácticas.
 
 </li><li>
-<span id="Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing-Traducción-Traducción estadística"></span><strong id="Traducción estadística">Traducción estadística</strong>: se aprenden reglas estadísticamente a partir de un gran conjunto de datos bilingüe. Tal que define un modelo de traducción que mapea textos de un lenguaje a otro. Solo funciona bien traduciendo textos similares a los de entrenamiento y necesita gran cantidad de datos
+<span id="Redes Neuronales Recurrentes-Traducción-Traducción estadística"></span><strong id="Traducción estadística">Traducción estadística</strong>: se aprenden reglas estadśiticamente a partir de un gran conjunto de datos bilingüe. Tal que define un modelo de traducción que mapea textos de un lenguaje a otro. Solo funciona bien traduciendo textos similares a los de entrenamiento y necesita gran cantidad de datos
 
 </li><li>
-<span id="Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing-Traducción-Traducción con redes neuronales"></span><strong id="Traducción con redes neuronales">Traducción con redes neuronales</strong>: utilizan un sólo modelo que trabaja sobre segmentos de texto, no sólo sobre palabras o frases.
+<span id="Redes Neuronales Recurrentes-Traducción-Traducción con redes neuronales"></span><strong id="Traducción con redes neuronales">Traducción con redes neuronales</strong>: utilizan un sólo modelo que trabaja sobre segmentos de texto, so sólo sobre palabras o frases.
 
 </li></ul>
 <p>
 Ver el cap. Machine Translation Using the Attention-Based Model de Hands-On Natural Language Processing with Python.
 </p>
 
-<div id="Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing-Búsqueda y Eliminación de Duplicados"><h3 id="Búsqueda y Eliminación de Duplicados" class="header"><a href="#Redes Neuronales Recurrentes-Ejemplos de Deep Learning para Natural Language Processing-Búsqueda y Eliminación de Duplicados">Búsqueda y Eliminación de Duplicados</a></h3></div>
+<div id="Redes Neuronales Recurrentes-Búsqueda y Eliminación de Duplicados"><h2 id="Búsqueda y Eliminación de Duplicados" class="header"><a href="#Redes Neuronales Recurrentes-Búsqueda y Eliminación de Duplicados">Búsqueda y Eliminación de Duplicados</a></h2></div>
 
 <p>
 Se puede conseguir utilizando una CNN basada en caracteres, que proporciona la flexibilidad para entrenar modelos con caracteres desconocidos y ofrece mayor capacidad de generalición que los embeddings a nivel de palabra.
